--- a/src/componentstyles/About.css
+++ b/src/componentstyles/About.css
@@ -75,6 +75,7 @@
 .ivan-the-dev-social-media-icons {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 16px;
     align-items: center;
 }
